--- a/definition.yml
+++ b/definition.yml
@@ -1,6 +1,6 @@
 id: dpt
-docker_repository: dynverse/dynmethods:dpt
-container_url: https://github.com/dynverse/dynmethods/tree/master/containers/dpt
+docker_repository: dynverse/ti_dpt
+container_url: https://github.com/dynverse/ti_dpt
 name: DPT
 type: algorithm
 doi: 10.1038/nmeth.3971
