--- a/definition.yml
+++ b/definition.yml
@@ -3,7 +3,7 @@ docker_repository: dynverse/ti_dpt
 singularity_collection: 1541
 container_url: https://github.com/dynverse/ti_dpt
 name: DPT
-type: algorithm
+source: tool
 doi: 10.1038/nmeth.3971
 google_scholar_cluster_id: '13227754795988844195'
 platform: R
